--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ig-reels-clone",
+  "name": "Instagram-reels-clone-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
